# VCTRenderer

./: .gitignore  .gitmodules  .travis.yml  LICENSE  README.md  VCTRenderer.sln  VCT_Engine.sln  _r_e_a_d_m_e_8md.html  _r_e_a_d_m_e_8md_source.html  all__0_8js.html  all__0_8js.js  all__0_8js_source.html  all__10_8js.html  all__10_8js.js  all__10_8js_source.html  all__11_8js.html  all__11_8js.js  all__11_8js_source.html  all__12_8js.html  all__12_8js.js  all__12_8js_source.html  all__13_8js.html  all__13_8js.js  all__13_8js_source.html  all__14_8js.html  all__14_8js.js  all__14_8js_source.html  all__15_8js.html  all__15_8js.js  all__15_8js_source.html  all__16_8js.html  all__16_8js.js  all__16_8js_source.html  all__17_8js.html  all__17_8js.js  all__17_8js_source.html  all__18_8js.html  all__18_8js.js  all__18_8js_source.html  all__19_8js.html  (+3552 more)
VCT_Engine/dependencies/oglplus/: .gitignore  CHANGELOG  CMakeLists.txt  README.rst  configure.bat  configure.py  configure.sh  oglplus-config  oglplus-config-comp
VCT_Engine/dependencies/oglplus/config/: CMakeLists.txt  CPPFeature.cmake  CommonDefs.cmake  CommonFindMod.cmake  Compiler.cmake  ExeRequirements.cmake  FindBoost.cmake  FindEGL.cmake  FindGL3W.cmake  FindGLES3.cmake  FindGLEW.cmake  FindGLFW.cmake  FindGLFW3.cmake  FindGLM.cmake  FindGLUT.cmake  FindGLX.cmake  FindOpenAL.cmake  FindOpenGL.cmake  FindPNG.cmake  FindPangoCairo.cmake  FindQT4GL.cmake  FindQT5GL.cmake  FindSDL.cmake  FindThreads.cmake  FindWXGL.cmake  GLExt.cmake  GLVer.cmake  GLVerExt.cmake  OGLplusLib.cmake  configure.bash_complete  help.man  help.txt  make_screenshot.sh
VCT_Engine/dependencies/oglplus/config/cpp/: has_CHRONO.cpp  has_CONSTEXPR.cpp  has_DEFAULTED_FUNCTIONS.cpp  has_DELETED_FUNCTIONS.cpp  has_EXPLICIT_CONVERSION_OPERATORS.cpp  has_FUNCTION_TEMPLATE_DEFAULT_ARGS.cpp  has_GENERALIZED_ATTRIBUTES.cpp  has_INHERITED_CONSTRUCTORS.cpp  has_INITIALIZER_LISTS.cpp  has_LAMBDAS.cpp  has_NOEXCEPT.cpp  has_NULLPTR.cpp  has_OVERRIDE.cpp  has_SCOPED_ENUMS.cpp  has_SCOPED_ENUM_TEMPLATE_PARAMS.cpp  has_TEMPLATE_ALIASES.cpp  has_THREADS.cpp  has_UNICODE_LITERALS.cpp  has_UNIFIED_INITIALIZATION_SYNTAX.cpp  has_USER_DEFINED_LITERALS.cpp  has_VARIADIC_MACROS.cpp  has_VARIADIC_TEMPLATES.cpp
VCT_Engine/dependencies/oglplus/config/ext_lib/: test_GLFW.cpp  test_GLFW3.cpp
VCT_Engine/dependencies/oglplus/config/gl/: assert_GL_VER_symbols.ipp.in  has_GLEW_EXT.cpp.in  has_GLEW_NV_path_rendering.cpp  has_GL_ARB_gpu_shader_fp64.cpp  has_GL_ARB_separate_shader_objects.cpp  has_GL_ARB_transform_feedback2.cpp  has_GL_EXT.cpp.in  has_GL_EXT.ipp.in  has_GL_EXT_direct_state_access.cpp  has_GL_KHR_debug.cpp  has_GL_NV_path_rendering.cpp  has_GL_VER.cpp.in  init_GL.ipp.in
VCT_Engine/dependencies/oglplus/config/oglplus/: can_build_lib.cpp.in
VCT_Engine/dependencies/oglplus/doc/doxygen/: CMakeLists.txt  Doxyfile.autohdr  Doxyfile.common
VCT_Engine/dependencies/oglplus/doc/quickbook/: Jamroot.jam  Makefile  boostbook.css  eglplus.qbk  index.qbk  oalplus.qbk  oglplus.qbk
VCT_Engine/dependencies/oglplus/etc/assets/: README.rst
VCT_Engine/dependencies/oglplus/example/: CMakeLists.txt
VCT_Engine/dependencies/oglplus/example/advanced/: CMakeLists.txt
VCT_Engine/dependencies/oglplus/example/android/: README.txt
VCT_Engine/dependencies/oglplus/example/eglplus/: 001_string_queries.cpp  002_configurations.cpp  003_configurations.cpp  CMakeLists.txt
VCT_Engine/dependencies/oglplus/example/oalplus/: 001_devices.cpp  001_hello.cpp  001_info.cpp  002_hello_path.cpp  CMakeLists.txt
VCT_Engine/dependencies/oglplus/example/oglplus/: 001_triangle.cpp  002_rect.cpp  002_shader_lit.cpp  002_triangle.cpp  003_triangle.cpp  004_rect.cpp  005_mandelbrot.cpp  006_cartoon_sun.cpp  006_newton_zoom.cpp  007_cubic_bezier.cpp  007_voronoi.cpp  008_lyapunov.cpp  009_metaballs.cpp  010_cmy_cube.cpp  011_writing.cpp  012_checker_sphere.cpp  013_striped_cubes.cpp  014_multi_cube.cpp  014_multi_cube_gs.cpp  014_multi_cube_ssbo.cpp  014_multi_cube_ub.cpp  015_obj_mesh.cpp  016_cartoon_torus.cpp  016_metallic_torus.cpp  016_noise_torus.cpp  016_textured_cube.cpp  017_clipped_torus.cpp  017_phong_torus.cpp  017_single_pass_edges.cpp  017_sky_box.cpp  018_atomic_counters.cpp  018_particle_system.cpp  018_stained_glass_cube.cpp  019_bpatch_tess.cpp  019_gs_tessell.cpp  019_helium.cpp  019_tessellation.cpp  020_cube_mapping.cpp  020_golf_ball.cpp  020_icosphere.cpp  (+82 more)
VCT_Engine/dependencies/oglplus/example/standalone/: 001_ati_meminfo.cpp  001_gl_info.cpp  001_gl_limits.cpp  001_hello_glut_glew.cpp  001_program_resources.cpp  001_shape2dot.cpp  001_text2d.cpp  001_triangle_glut_gles3.cpp  001_triangle_glut_glew.cpp  001_triangle_screenshot.cpp  001_triangle_sdl_glew.cpp  001_triangle_wxgl_glew.cpp  002_amd_perf_monitor.cpp  002_simple_path.cpp  002_triangle_compatibility.cpp  002_triangles_glfw3_glew.cpp  003_dsa_texture.cpp  003_simple_text.cpp  004_any_text_rendering.cpp  004_bitmap_text_hello.cpp  004_bitmap_text_rendering.cpp  004_pango_cairo_hello.cpp  004_stbttf_text_rendering.cpp  004_text_rendering.cpp  007_glm_boxes.cpp  010_blender2html.cpp  020_oglplus_oalplus.cpp  025_bitmap_font_text.cpp  026_blender_mesh_loader.cpp  029_mandelbrot_glfw3.cpp  CMakeLists.txt  glut_glew_example.hpp
VCT_Engine/dependencies/oglplus/include/eglplus/: context_flag.hpp  texture_target.hpp  vg_alpha_format.hpp
VCT_Engine/dependencies/oglplus/test/: CMakeLists.txt
VCT_Engine/dependencies/oglplus/tools/: Makefile  _get_cpp_gl_reqs.sh  _get_exe_gl_reqs.sh  _get_gl_sym_ver.sh  _get_ogl_defs.sh  _get_ogl_funs.sh  build_and_run.sh  make_archive.bat  make_archive.sh  make_bitmap_font.cpp  make_example_dep_lists.sh  make_glext_adapter.sh  make_help.sh  make_vec_swiz_header.sh  minc_to_raw_cube.sh  prebuild.sh  publish_docs.sh  render_videos.py  reshape_raw_cube.cpp  test_all_configs.py  workflow.py
VCT_Engine/dependencies/oglplus/web/: frame.php  index.php  news.rss  oglplus.less  rss2html.xsl
VCT_Engine/dependencies/oglplus/xslt/: ARB_d_o_xml2tree.xsl  gl_xml_version_check.xsl
(+2945 files in other folders)
